tests/NormalTests/paczka1/small_fuzzy/46098549.err
Error in line 4: Gsra9aGihvZ A915 164,1
Error in line 3: 4OIbEpJYk S361 57,6
Error in line 7: Gsra9aGihvZ S361 41,9
